# ndnp-open-ocr

./: .env.example  .gitattributes  .gitignore  .gitlab-ci  .gitlab-ci.yml  .terraform.tfstate.lock.info  AGPL_SOURCE_OFFER.md  Dockerfile  Dockerfile.Lambda  FAQ.md  LICENSE  LICENSE.md  Makefile  NOTICE  OPENSOURCE_README.md  README.md  THIRD_PARTY_NOTICES.md.REMOVED.git-id  Thumbs.db  backend.hcl.example  graph.png.REMOVED.git-id  list.ipynb  main.py  main.tf  median_psm6_output.pdf.REMOVED.git-id  providers.tf  quality_test.ipynb.REMOVED.git-id  requirements.txt  terraform.tfstate  terraform.tfstate.backup  test.ipynb  test.ipynb.REMOVED.git-id  test.json.REMOVED.git-id  test.py  untitled.ipynb.REMOVED.git-id  variables.tf
.terraform/: environment
.terraform/modules/: modules.json
cli/: README.md
documentation/: opensource.aux  opensource.fdb_latexmk  opensource.fls  opensource.tex  opensource.xdv
functions/: alto_consumer.py  alto_dlq_consumer.py  consumer.py  dlq_consumer.py  get_job.py  helpers.py  lambda.py  pdf_consumer.py  pdf_dlq_consumer.py  requirements.txt  retry_job.py  scheduler.py
jupyter/: missing_files.ipynb
lambdas/: alto_consumer.py  alto_dlq_consumer.py  batch_completion_trigger.py  get_job.py  get_job_status.py  list_keys.py  pdf_consumer.py  pdf_dlq_consumer.py  requirements.txt  scheduler.py
ndnp_open_ocr/: Makefile
resources/apigw/: main.tf  (+1 more)
scripts/: Dockerfile  README.md  adaptive_threshold_benchmarks.ipynb  cli.py  helpers.py  publish-public-branch.sh  pyproject.toml  retry_job.py
scripts/ndnp_open_ocr_cli/: cli.py  helpers.py
(+51 files in other folders)
