[tool.poetry]
name = "ndnp_open_ocr_cli"
version = "0.1.0"
description = ""
authors = ["Library of Congress"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "1.23.10"
click = "8.0.1"
requests = "2.26.0"
tqdm = "4.64.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ndnp_openocr = 'ndnp_open_ocr_cli.cli:cli'